--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "socket.io": "^2.2.0"
   }
 }
