--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.0",
+    "mongodb": "^3.2.5",
     "socket.io": "^2.2.0"
   }
 }
